--- a/project-webperf.html
+++ b/project-webperf.html
@@ -8,7 +8,7 @@
 	<title>Cameron Pitman: Portfolio</title>
 
 	<!--<link href="css/style.css" rel="stylesheet">-->
-	<!---main CSS included as an internal stylesheet instead of an external file--->
+	<!--main CSS included as an internal stylesheet instead of an external file-->
 	<style>
 		html {
 			font-size: 100%;
@@ -91,7 +91,7 @@
 		}
 	</style>
 	
-	<!---adding the media attribute for styles specific to print and portrait modes, to be loaded only in those modes--->
+	<!--adding the media attribute for styles specific to print and portrait modes, to be loaded only in those modes-->
 	<link href="css/print.css" rel="stylesheet" media="print">
 	<link href="css/styleMobile.css" rel="stylesheet" media="orientation:portrait">
 
